<resources>
    <string name="app_name">CC 배경화면</string>
    <string name="title_select">배경화면 선택</string>
    <string name="title_gallery">갤러리</string>
    <string name="title_search">배경화면 검색</string>
    <string name="title_setting">설정</string>
    <string name="desc_folder_image">폴더</string>
    <string name="desc_folder_open_image">열려진 폴더</string>
    <string name="label_select">배경화면 선택</string>
    <string name="label_preview">미리보기</string>
    <string name="label_done">확인</string>
    <string name="key_max">max</string>
    <string name="key_progress">progress</string>
    <string name="wallpaper_set_action">ACTION.SET_WALLPAPER.WallpaperMangerReceiver</string>
    <string name="label_change_screen_select">변경 화면 선택</string>
    <string name="label_wallpaper_change_cycle_select">배경화면 변경 주기 선택</string>
    <string name="label_wallpaper">배경화면</string>
    <string name="label_lock_screen">잠금화면</string>
    <string name="label_wallpaper_plus_lock_screen">배경화면 + 잠금화면</string>
    <string name="label_five_minute">5분</string>
    <string name="label_ten_minute">10분</string>
    <string name="label_thirty_minute">30분</string>
    <string name="label_one_hour">1시간</string>
    <string name="label_two_hour">2시간</string>
    <string name="label_three_hour">3시간</string>
    <string name="label_six_hour">6시간</string>
    <string name="label_twelve_hour">12시간</string>
    <string name="label_twenty_four_hour">24시간</string>
    <string name="label_cancel">취소</string>
    <string name="label_wallpaper_register">배경화면으로 등록</string>
    <string name="label_minute">분</string>
    <string name="label_hour">시간</string>
    <string name="label_search_option">검색 옵션 설정</string>
    <string name="label_search_result_save">저장</string>
    <string name="label_search_result_do_not_save">저장 안함</string>
    <string name="label_last_search_result">마지막 검색어 및 결과 저장 여부</string>
    <string name="label_setting_completion">설정 완료</string>
    <string name="restart_service_action">ACTION.RESTART.WallpaperManagerService</string>
    <string name="label_screen_on_change_wallpaper">화면이 켜질 때마다 배경화면 변경</string>
    <string name="label_wallpaper_change_using">배경화면 변경 사용중</string>
    <string name="label_wallpaper_change_not_using">배경화면 변경 사용 안함</string>
    <string name="label_wallpaper_change_cycle">배경화면 변경 주기</string>
    <string name="label_random_wallpaper">배경화면 변경 순서 무작위</string>
    <string name="label_transparent_wallpaper">투명 배경화면</string>
    <string name="label_using">사용중</string>
    <string name="label_not_using">사용 안함</string>
    <string name="label_setup_wallpaper">"배경화면을 설정해주세요</string>
    <string name="message_loading">[데이터베이스 동기화 중]\n이미지가 많으면 오래 걸릴 수 있습니다.</string>
    <string name="message_search_image">이미지를 검색해주세요.</string>
    <string name="message_hint_search">검색어 입력</string>
    <string name="message_downloading">이미지를 내려받고 있습니다</string>
    <string name="message_set_wallpaper">배경화면을 설정하고 있습니다</string>
    <string name="message_first_execution">[데이터베이스 구성 중]\n이미지가 많으면 오래 걸릴 수 있습니다.</string>
    <string name="label_open_source_license">오픈소스 라이선스</string>
    <string name="message_thumbnail_not_exist">미리보기 이미지가 존재하지 않습니다.</string>
    <string name="message_search_failure">검색결과를 가져올 수 없습니다.\n인터넷 연결을 확인해 주세요.</string>
    <string name="message_intro_select_images">여러 개의 배경화면 이미지 선택!</string>
    <string name="message_intro_select_cycle">배경화면 변경 시간 선택!</string>
    <string name="message_intro_search_and_download">배경화면 검색 및 다운로드!</string>
    <string name="message_intro_setting">현재 설정된 배경화면의 정보를 한눈에 볼 수 있는 기능!</string>
    <string name="label_sync">동기화</string>
</resources>
