<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_preview"
        android:icon="@drawable/ic_view_array_white_24dp"
        android:orderInCategory="1"
        android:title="@string/label_preview"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_done"
        android:icon="@drawable/ic_done_white_24dp"
        android:orderInCategory="2"
        android:title="@string/label_done"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_select"
        android:orderInCategory="3"
        android:title="@string/label_select"
        app:showAsAction="never" />
</menu>