<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/alert_padding"
    android:paddingTop="@dimen/alert_padding"
    android:paddingRight="@dimen/alert_padding">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_last_search_result"
            android:textColor="@color/colorTeal300"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RadioGroup
                android:id="@+id/rb_search_result_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:buttonTint="@drawable/selector_radio_button"
                    android:textColor="@drawable/selector_radio_button"
                    android:text="@string/label_search_result_save" />
                <android.support.v7.widget.AppCompatRadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:buttonTint="@drawable/selector_radio_button"
                    android:textColor="@drawable/selector_radio_button"
                    android:text="@string/label_search_result_do_not_save" />
            </RadioGroup>
        </ScrollView>
    </LinearLayout>
</LinearLayout>