<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/divider"
            android:showDividers="middle">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_wallpaper"
                            android:textColor="@color/colorTeal300"
                            android:textSize="17sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">
                        <TextView
                            android:id="@+id/tv_wallpaper_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:textColor="@color/colorGrey500"
                            android:paddingTop="5dp"
                            android:text="@string/label_not_using"/>
                    </LinearLayout>
                </LinearLayout>
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sw_wallpaper_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:theme="@style/CustomSwitch"
                    android:checked="true"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/layout_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGrey300"
                android:gravity="center_horizontal"
                android:padding="20dp">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_wallpaper_change_cycle"
                            android:textColor="@color/colorTeal300"
                            android:textSize="17sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">
                        <TextView
                            android:id="@+id/tv_wallpaper_change_cycle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:textColor="@color/colorGrey500"
                            android:paddingTop="5dp"
                            android:text="@string/label_not_using"/>
                    </LinearLayout>
                </LinearLayout>
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sw_wallpaper_change_cycle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:theme="@style/CustomSwitch"
                    android:checked="true"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_random_wallpaper"
                            android:textColor="@color/colorTeal300"
                            android:textSize="17sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">
                        <TextView
                            android:id="@+id/tv_random_wallpaper"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:textColor="@color/colorGrey500"
                            android:paddingTop="5dp"
                            android:text="@string/label_not_using"/>
                    </LinearLayout>
                </LinearLayout>
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sw_random_wallpaper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:theme="@style/CustomSwitch"
                    android:checked="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_transparent_wallpaper"
                            android:textColor="@color/colorTeal300"
                            android:textSize="17sp" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">
                        <TextView
                            android:id="@+id/tv_transparent_wallpaper"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"
                            android:textColor="@color/colorGrey500"
                            android:paddingTop="5dp"
                            android:text="@string/label_not_using"/>
                    </LinearLayout>
                </LinearLayout>
                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/sw_transparent_wallpaper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:theme="@style/CustomSwitch"
                    android:checked="false"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
